# kaggle_5day_agent_portfolio_tracker

./: .env.example  README.md  pyproject.toml  skills-lock.json
plan/: idea_gemini.md  implementation_plan_tdd.md  implementation_plan_tdd_revised.md  phase1_codebase_structure.md
plan/implementation/: phase01.md  phase02.md  phase03.md  phase04.md  phase05.md  phase06.md  phase07.md  phase08.md  phase09.md  phase10.md
src/portfolio_tracker/: __init__.py  cli.py  config.py  prompts.py  schemas.py  workflow.py
src/portfolio_tracker/agents/: __init__.py  base.py  cio.py  critic.py  fundamentals.py  macro.py  performance.py  sentiment.py
src/portfolio_tracker/tools/: __init__.py  edgar_tools.py  news_tools.py  transcript_tools.py  yfinance_tools.py
tests/: conftest.py
tests/fixtures/: macro_news_sample.json  price_history_sample.json  sec_filing_summary_sample.json  transcript_qa_sample.txt
tests/unit/: test_agent_wrappers.py  test_cio_synthesis.py  test_cli.py  test_critic_loop.py  test_edgar_tools.py  test_network_guard.py  test_news_tools.py  test_package_import.py  test_prompts.py  test_schemas.py  test_transcript_tools.py  test_workflow.py  test_yfinance_tools.py
