[project]
name = "kaggle-5day-agent-portfolio-tracker"
version = "0.1.0"
description = "Market signal synthesizer for long-term portfolio research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edgartools",
    "pandas",
    "pydantic",
    "python-dotenv",
    "yfinance",
]

[project.scripts]
portfolio-tracker = "portfolio_tracker.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_tracker"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "allow_network: permit live socket connections for this test",
]
